PPL_ass1/src/main/d96/parser/D96Parser.py
# Generated from main/d96/parser/D96.g4 by ANTLR 4.9.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class D96Parser ( Parser ):

    grammarFileName = "D96.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'Break'", "'Continue'", "'If'", "'Elseif'", 
                     "'Else'", "'Foreach'", "'Array'", "'In'", "'By'", "'Int'", 
                     "'Float'", "'Boolean'", "'String'", "'Null'", "'Return'", 
                     "<INVALID>", "'Self'", "'New'", "'Class'", "'Val'", 
                     "'Var'", "'Constructor'", "'Destructor'", "<INVALID>", 
                     "'='", "'+'", "'-'", "'*'", "'/'", "'%'", "'!'", "'&&'", 
                     "'||'", "'==.'", "'+.'", "'=='", "'!='", "'>'", "'<'", 
                     "'>='", "'<='", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "'('", "')'", "'{'", "'}'", "'['", "']'", "'::'", "':'", 
                     "'..'", "'.'", "','", "';'" ]

    symbolicNames = [ "<INVALID>", "BREAK", "CONTINUE", "IF", "ELSEIF", 
                      "ELSE", "FOREACH", "ARRAY", "IN", "BY", "INT_TYPE", 
                      "FLOAT_TYPE", "BOOLEAN_TYPE", "STRING_TYPE", "NULL", 
                      "RETURN", "ATTRIBUTE_TYPE", "SELF", "NEW", "CLASS", 
                      "IMMUTABLE", "MUTABLE", "CONSTRUCTOR", "DESTRUCTOR", 
                      "DOLLAR_ID", "ASSIGN", "ADD", "SUB", "MUL", "DIV", 
                      "MOD", "NOT", "AND", "OR", "STRCOMPARE", "CONCATE", 
                      "EQUAL", "NOTEQUAL", "LARGER", "SMALLER", "LE", "SE", 
                      "INTLIT_ARR", "INT_LIT_ARR", "BIN_", "DEC_", "OCTAL_", 
                      "HEXA_", "INT_LITERAL", "BOOL_LITERAL", "FLOAT_LITERAL", 
                      "STRING_LITERAL", "BLOCK_COMMENT", "LB", "RB", "LP", 
                      "RP", "LS", "RS", "DOUBLE_COLON", "COLON", "DOUBLEDOT", 
                      "DOT", "COMMA", "SEMI_COLON", "ID", "WS", "UNCLOSE_STRING", 
                      "ILLEGAL_ESCAPE", "ERROR_CHAR" ]

    RULE_program = 0
    RULE_class_declaration = 1
    RULE_member = 2
    RULE_attribute_declaration = 3
    RULE_testing = 4
    RULE_testing2 = 5
    RULE_primitive_type = 6
    RULE_array_type = 7
    RULE_att_name = 8
    RULE_method_declaration = 9
    RULE_parameter_decl = 10
    RULE_constructor = 11
    RULE_destructor = 12
    RULE_block_statement = 13
    RULE_statement = 14
    RULE_var_declare_statement = 15
    RULE_var_decl_stm_only = 16
    RULE_var_decl_stm_assign = 17
    RULE_assign_statement = 18
    RULE_assign_statement_main = 19
    RULE_if_statement = 20
    RULE_for_statement = 21
    RULE_scalar = 22
    RULE_scalar_test = 23
    RULE_method_invocation = 24
    RULE_return_statement = 25
    RULE_break_statement = 26
    RULE_continue_statement = 27
    RULE_expression = 28
    RULE_expression1 = 29
    RULE_expression2 = 30
    RULE_expression3 = 31
    RULE_expression4 = 32
    RULE_expression5 = 33
    RULE_expression6 = 34
    RULE_expression7 = 35
    RULE_expression8 = 36
    RULE_expression9 = 37
    RULE_expression10 = 38
    RULE_index_operator = 39
    RULE_operands = 40
    RULE_dollar_function = 41
    RULE_new_object = 42
    RULE_function_call = 43
    RULE_indexed_array = 44
    RULE_multi_array = 45

    ruleNames =  [ "program", "class_declaration", "member", "attribute_declaration", 
                   "testing", "testing2", "primitive_type", "array_type", 
                   "att_name", "method_declaration", "parameter_decl", "constructor", 
                   "destructor", "block_statement", "statement", "var_declare_statement", 
                   "var_decl_stm_only", "var_decl_stm_assign", "assign_statement", 
                   "assign_statement_main", "if_statement", "for_statement", 
                   "scalar", "scalar_test", "method_invocation", "return_statement", 
                   "break_statement", "continue_statement", "expression", 
                   "expression1", "expression2", "expression3", "expression4", 
                   "expression5", "expression6", "expression7", "expression8", 
                   "expression9", "expression10", "index_operator", "operands", 
                   "dollar_function", "new_object", "function_call", "indexed_array", 
                   "multi_array" ]

    EOF = Token.EOF
    BREAK=1
    CONTINUE=2
    IF=3
    ELSEIF=4
    ELSE=5
    FOREACH=6
    ARRAY=7
    IN=8
    BY=9
    INT_TYPE=10
    FLOAT_TYPE=11
    BOOLEAN_TYPE=12
    STRING_TYPE=13
    NULL=14
    RETURN=15
    ATTRIBUTE_TYPE=16
    SELF=17
    NEW=18
    CLASS=19
    IMMUTABLE=20
    MUTABLE=21
    CONSTRUCTOR=22
    DESTRUCTOR=23
    DOLLAR_ID=24
    ASSIGN=25
    ADD=26
    SUB=27
    MUL=28
    DIV=29
    MOD=30
    NOT=31
    AND=32
    OR=33
    STRCOMPARE=34
    CONCATE=35
    EQUAL=36
    NOTEQUAL=37
    LARGER=38
    SMALLER=39
    LE=40
    SE=41
    INTLIT_ARR=42
    INT_LIT_ARR=43
    BIN_=44
    DEC_=45
    OCTAL_=46
    HEXA_=47
    INT_LITERAL=48
    BOOL_LITERAL=49
    FLOAT_LITERAL=50
    STRING_LITERAL=51
    BLOCK_COMMENT=52
    LB=53
    RB=54
    LP=55
    RP=56
    LS=57
    RS=58
    DOUBLE_COLON=59
    COLON=60
    DOUBLEDOT=61
    DOT=62
    COMMA=63
    SEMI_COLON=64
    ID=65
    WS=66
    UNCLOSE_STRING=67
    ILLEGAL_ESCAPE=68
    ERROR_CHAR=69

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(D96Parser.EOF, 0)

        def class_declaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(D96Parser.Class_declarationContext)
            else:
                return self.getTypedRuleContext(D96Parser.Class_declarationContext,i)


        def getRuleIndex(self):
            return D96Parser.RULE_program

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = D96Parser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 93 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 92
                self.class_declaration()
                self.state = 95 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==D96Parser.CLASS):
                    break

            self.state = 97
            self.match(D96Parser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Class_declarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CLASS(self):
            return self.getToken(D96Parser.CLASS, 0)

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(D96Parser.ID)
            else:
                return self.getToken(D96Parser.ID, i)

        def LP(self):
            return self.getToken(D96Parser.LP, 0)

        def RP(self):
            return self.getToken(D96Parser.RP, 0)

        def COLON(self):
            return self.getToken(D96Parser.COLON, 0)

        def member(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(D96Parser.MemberContext)
            else:
                return self.getTypedRuleContext(D96Parser.MemberContext,i)


        def getRuleIndex(self):
            return D96Parser.RULE_class_declaration

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitClass_declaration" ):
                return visitor.visitClass_declaration(self)
            else:
                return visitor.visitChildren(self)




    def class_declaration(self):

        localctx = D96Parser.Class_declarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_class_declaration)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 99
            self.match(D96Parser.CLASS)
            self.state = 100
            self.match(D96Parser.ID)
            self.state = 103
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==D96Parser.COLON:
                self.state = 101
                self.match(D96Parser.COLON)
                self.state = 102
                self.match(D96Parser.ID)


            self.state = 105
            self.match(D96Parser.LP)
            self.state = 109
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while ((((_la - 16)) & ~0x3f) == 0 and ((1 << (_la - 16)) & ((1 << (D96Parser.ATTRIBUTE_TYPE - 16)) | (1 << (D96Parser.CONSTRUCTOR - 16)) | (1 << (D96Parser.DESTRUCTOR - 16)) | (1 << (D96Parser.DOLLAR_ID - 16)) | (1 << (D96Parser.ID - 16)))) != 0):
                self.state = 106
                self.member()
                self.state = 111
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 112
            self.match(D96Parser.RP)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MemberContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def attribute_declaration(self):
            return self.getTypedRuleContext(D96Parser.Attribute_declarationContext,0)


        def method_declaration(self):
            return self.getTypedRuleContext(D96Parser.Method_declarationContext,0)


        def constructor(self):
            return self.getTypedRuleContext(D96Parser.ConstructorContext,0)


        def destructor(self):
            return self.getTypedRuleContext(D96Parser.DestructorContext,0)


        def getRuleIndex(self):
            return D96Parser.RULE_member

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMember" ):
                return visitor.visitMember(self)
            else:
                return visitor.visitChildren(self)




    def member(self):

        localctx = D96Parser.MemberContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_member)
        try:
            self.state = 118
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [D96Parser.ATTRIBUTE_TYPE]:
                self.enterOuterAlt(localctx, 1)
                self.state = 114
                self.attribute_declaration()
                pass
            elif token in [D96Parser.DOLLAR_ID, D96Parser.ID]:
                self.enterOuterAlt(localctx, 2)
                self.state = 115
                self.method_declaration()
                pass
            elif token in [D96Parser.CONSTRUCTOR]:
                self.enterOuterAlt(localctx, 3)
                self.state = 116
                self.constructor()
                pass
            elif token in [D96Parser.DESTRUCTOR]:
                self.enterOuterAlt(localctx, 4)
                self.state = 117
                self.destructor()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Attribute_declarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ATTRIBUTE_TYPE(self):
            return self.getToken(D96Parser.ATTRIBUTE_TYPE, 0)

        def SEMI_COLON(self):
            return self.getToken(D96Parser.SEMI_COLON, 0)

        def testing(self):
            return self.getTypedRuleContext(D96Parser.TestingContext,0)


        def testing2(self):
            return self.getTypedRuleContext(D96Parser.Testing2Context,0)


        def getRuleIndex(self):
            return D96Parser.RULE_attribute_declaration

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAttribute_declaration" ):
                return visitor.visitAttribute_declaration(self)
            else:
                return visitor.visitChildren(self)




    def attribute_declaration(self):

        localctx = D96Parser.Attribute_declarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_attribute_declaration)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 120
            self.match(D96Parser.ATTRIBUTE_TYPE)
            self.state = 123
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.state = 121
                self.testing()
                pass

            elif la_ == 2:
                self.state = 122
                self.testing2()
                pass


            self.state = 125
            self.match(D96Parser.SEMI_COLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TestingContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def att_name(self):
            return self.getTypedRuleContext(D96Parser.Att_nameContext,0)


        def COLON(self):
            return self.getToken(D96Parser.COLON, 0)

        def primitive_type(self):
            return self.getTypedRuleContext(D96Parser.Primitive_typeContext,0)


        def array_type(self):
            return self.getTypedRuleContext(D96Parser.Array_typeContext,0)


        def ID(self):
            return self.getToken(D96Parser.ID, 0)

        def ASSIGN(self):
            return self.getToken(D96Parser.ASSIGN, 0)

        def expression(self):
            return self.getTypedRuleContext(D96Parser.ExpressionContext,0)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(D96Parser.COMMA)
            else:
                return self.getToken(D96Parser.COMMA, i)

        def testing(self):
            return self.getTypedRuleContext(D96Parser.TestingContext,0)


        def getRuleIndex(self):
            return D96Parser.RULE_testing

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTesting" ):
                return visitor.visitTesting(self)
            else:
                return visitor.visitChildren(self)




    def testing(self):

        localctx = D96Parser.TestingContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_testing)
        try:
            self.state = 143
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 127
                self.att_name()

                self.state = 128
                self.match(D96Parser.COLON)
                self.state = 132
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [D96Parser.INT_TYPE, D96Parser.FLOAT_TYPE, D96Parser.BOOLEAN_TYPE, D96Parser.STRING_TYPE]:
                    self.state = 129
                    self.primitive_type()
                    pass
                elif token in [D96Parser.ARRAY]:
                    self.state = 130
                    self.array_type()
                    pass
                elif token in [D96Parser.ID]:
                    self.state = 131
                    self.match(D96Parser.ID)
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 134
                self.match(D96Parser.ASSIGN)
                self.state = 135
                self.expression()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 137
                self.att_name()
                self.state = 138
                self.match(D96Parser.COMMA)
                self.state = 139
                self.testing()

                self.state = 140
                self.match(D96Parser.COMMA)
                self.state = 141
                self.expression()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Testing2Context(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def att_name(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(D96Parser.Att_nameContext)
            else:
                return self.getTypedRuleContext(D96Parser.Att_nameContext,i)


        def COLON(self):
            return self.getToken(D96Parser.COLON, 0)

        def primitive_type(self):
            return self.getTypedRuleContext(D96Parser.Primitive_typeContext,0)


        def array_type(self):
            return self.getTypedRuleContext(D96Parser.Array_typeContext,0)


        def ID(self):
            return self.getToken(D96Parser.ID, 0)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(D96Parser.COMMA)
            else:
                return self.getToken(D96Parser.COMMA, i)

        def getRuleIndex(self):
            return D96Parser.RULE_testing2

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTesting2" ):
                return visitor.visitTesting2(self)
            else:
                return visitor.visitChildren(self)




    def testing2(self):

        localctx = D96Parser.Testing2Context(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_testing2)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 145
            self.att_name()
            self.state = 150
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==D96Parser.COMMA:
                self.state = 146
                self.match(D96Parser.COMMA)
                self.state = 147
                self.att_name()
                self.state = 152
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 153
            self.match(D96Parser.COLON)
            self.state = 157
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [D96Parser.INT_TYPE, D96Parser.FLOAT_TYPE, D96Parser.BOOLEAN_TYPE, D96Parser.STRING_TYPE]:
                self.state = 154
                self.primitive_type()
                pass
            elif token in [D96Parser.ARRAY]:
                self.state = 155
                self.array_type()
                pass
            elif token in [D96Parser.ID]:
                self.state = 156
                self.match(D96Parser.ID)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Primitive_typeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INT_TYPE(self):
            return self.getToken(D96Parser.INT_TYPE, 0)

        def FLOAT_TYPE(self):
            return self.getToken(D96Parser.FLOAT_TYPE, 0)

        def BOOLEAN_TYPE(self):
            return self.getToken(D96Parser.BOOLEAN_TYPE, 0)

        def STRING_TYPE(self):
            return self.getToken(D96Parser.STRING_TYPE, 0)

        def getRuleIndex(self):
            return D96Parser.RULE_primitive_type

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrimitive_type" ):
                return visitor.visitPrimitive_type(self)
            else:
                return visitor.visitChildren(self)




    def primitive_type(self):

        localctx = D96Parser.Primitive_typeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_primitive_type)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 159
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << D96Parser.INT_TYPE) | (1 << D96Parser.FLOAT_TYPE) | (1 << D96Parser.BOOLEAN_TYPE) | (1 << D96Parser.STRING_TYPE))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Array_typeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ARRAY(self):
            return self.getToken(D96Parser.ARRAY, 0)

        def LS(self):
            return self.getToken(D96Parser.LS, 0)

        def COMMA(self):
            return self.getToken(D96Parser.COMMA, 0)

        def RS(self):
            return self.getToken(D96Parser.RS, 0)

        def primitive_type(self):
            return self.getTypedRuleContext(D96Parser.Primitive_typeContext,0)


        def ID(self):
            return self.getToken(D96Parser.ID, 0)

        def array_type(self):
            return self.getTypedRuleContext(D96Parser.Array_typeContext,0)


        def INTLIT_ARR(self):
            return self.getToken(D96Parser.INTLIT_ARR, 0)

        def getRuleIndex(self):
            return D96Parser.RULE_array_type

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArray_type" ):
                return visitor.visitArray_type(self)
            else:
                return visitor.visitChildren(self)




    def array_type(self):
